# limits_of_detection

./: CMakeLists.txt  README.md
include/: limits_of_detection.hpp
src/: example_1.cpp  limits_of_detection.cpp  main.cpp
